# SolarSystem

./: .gitignore  README.md  xml.xml
Phase1/: CMakeLists.txt  xml.xml
Phase1/Engine/: engine.cpp  test.xml
Phase1/Generator/: generator.cpp  generator.h  models.cpp  models.h
Phase1/files3d/: box.3d  plane.3d
Phase1/src/: Shape.cpp  Shape.h  shape.cpp  shape.h  vertex.cpp  vertex.h
Phase2/: CMakeLists.txt
Phase2/Engine/: Parser.cpp  engine.cpp  engine.h
Phase2/Generator/: generator.cpp  models.cpp  models.h
Phase2/files3d/: sphere.3d  torus.3d
Phase2/src/: Action.cpp  Action.h  Group.h  Shape.cpp
Phase3/: CMakeLists.txt  System.xml
Phase3/Engine/: Parser.cpp  engine.cpp
Phase3/Generator/: bezier.cpp  bezier.h  generator.cpp
Phase3/files3d/: sphere.3d  teapot.3d  torus.3d
Phase3/src/: Action.cpp  CatmullRom.cpp  CatmullRom.h  Shape.cpp  Shape.h  Vertex.h
Phase4/: CMakeLists.txt  System.xml  light.xml
Phase4/Engine/: Parser.cpp  Parser.h  engine.cpp
Phase4/Generator/: bezier.cpp  bezier.h  generator.cpp  models.cpp
Phase4/files3d/: ring.3d  sphere.3d  sphereSun.3d  teapot.3d  torus.3d
Phase4/src/: Action.h  Group.cpp  Group.h  Light.cpp  Light.h  Material.cpp  Material.h  Shape.cpp  Shape.h  Vertex.cpp  Vertex.h
